@startuml
title Paquete plata

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam linetype ortho
hide empty members

package "plata" {
    interface TractorAPI {
        + avanzar(distancia : double, velocidad : double) : void
        + ajustarVelocidad(velocidad : double) : void
        + retroceder(distancia : double, velocidad : double) : void
        + frenar() : void
        + irA(x : double, z : double, velocidad : double) : void
        + irOrigen() : void
        + girar(angulo : double) : void
        + girarDerecha() : void
        + girarIzquierda() : void
        + girarSentidoContrario() : void
        + mostrar(mensaje : String) : void
        + arar(estado : boolean) : void
        + sembrar(estado : boolean) : void
        + regar(estado : boolean) : void
        + fumigar(estado : boolean) : void
    }

    class MiVisitor {
        + {static} VALOR_PEQUEÑO : double
        - variables : Map<String, Valor>
        - tractor : TractorAPI
        + MiVisitor(tractor : TractorAPI)
        + visitAsignacion(ctx) : Valor
        + visitAvanzar(ctx) : Valor
        + visitAjustar_velocidad(ctx) : Valor
        + visitRetroceder(ctx) : Valor
        + visitFrenar(ctx) : Valor
        + visitIrA(ctx) : Valor
        + visitIrOrigen(ctx) : Valor
        + visitGirar(ctx) : Valor
        + visitGirar_derecha(ctx) : Valor
        + visitGirar_izquierda(ctx) : Valor
        + visitGirar_sentido_contrario(ctx) : Valor
        + visitIniciarTarea(ctx) : Valor
        + visitFinalizarTarea(ctx) : Valor
        + visitMostrar(ctx) : Valor
    }

    class Valor {
        + {static} VACIO : Valor
        - valor : Object
        + Valor(valor : Object)
        + asBoolean() : Boolean
        + asDouble() : Double
        + asString() : String
        + isDouble() : boolean
        + isString() : boolean
        + isBoolean() : boolean
    }

    class PLATAException {
        + PLATAException(message : String)
    }

    interface PLATAVisitor
    class PLATABaseVisitor
    class PLATALexer
    class PLATAParser
}

MiVisitor --|> PLATABaseVisitor
PLATABaseVisitor ..|> PLATAVisitor

MiVisitor --> TractorAPI : invoca acciones
MiVisitor --> Valor : evalua/devuelve
MiVisitor --> PLATAException : lanza
MiVisitor ..> PLATAParser : visita nodos

Valor --> PLATAException : error de tipo

@enduml